Done : front home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,42 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="container">
+  <div class="row d-flex justify-content-around">
+   <div class="col-lg-6">
+      <div class="card-product">
+        <%= image_tag "drone.png", alt: "drone", class: "drone" %>
+        <div class="card-product-infos">
+          <h2>Phantom 4 Pro V2.0</h2>
+          <p>Équipé d'un capteur CMOS de 1 pouce, capable de prendre des vidéos 4K à 60 ips et des photos 20MP, le Phantom 4 Pro V2.0 apporte aux réalisateurs une liberté de création absolue. Le système de transmission OcuSync 2.0 HD assure une connectivité stable et fiable, la détection d’obstacles dans cinq directions permet une sécurité de vol accrue et une radiocommande dédiée avec un écran intégré fournit un contrôle et une précision améliorée..</p>
+        </div>
+      </div>
+
+  </div>
+  <div class="col-lg-6">
+      <div class="card-product">
+        <%= image_tag "drone.png", alt: "drone", class: "drone" %>
+        <div class="card-product-infos">
+          <h2>Phantom 4 Pro V2.0</h2>
+          <p>Équipé d'un capteur CMOS de 1 pouce, capable de prendre des vidéos 4K à 60 ips et des photos 20MP, le Phantom 4 Pro V2.0 apporte aux réalisateurs une liberté de création absolue. Le système de transmission OcuSync 2.0 HD assure une connectivité stable et fiable, la détection d’obstacles dans cinq directions permet une sécurité de vol accrue et une radiocommande dédiée avec un écran intégré fournit un contrôle et une précision améliorée..</p>
+        </div>
+      </div>
+  </div>
+
+  <div class="col-lg-6">
+      <div class="card-product">
+        <%= image_tag "drone.png", alt: "drone", class: "drone" %>
+        <div class="card-product-infos">
+          <h2>Phantom 4 Pro V2.0</h2>
+          <p>Équipé d'un capteur CMOS de 1 pouce, capable de prendre des vidéos 4K à 60 ips et des photos 20MP, le Phantom 4 Pro V2.0 apporte aux réalisateurs une liberté de création absolue. Le système de transmission OcuSync 2.0 HD assure une connectivité stable et fiable, la détection d’obstacles dans cinq directions permet une sécurité de vol accrue et une radiocommande dédiée avec un écran intégré fournit un contrôle et une précision améliorée..</p>
+        </div>
+      </div>
+  </div>
+
+  <div class="col-lg-6">
+      <div class="card-product">
+        <%= image_tag "drone.png", alt: "drone", class: "drone" %>
+        <div class="card-product-infos">
+          <h2>Phantom 4 Pro V2.0</h2>
+          <p>Équipé d'un capteur CMOS de 1 pouce, capable de prendre des vidéos 4K à 60 ips et des photos 20MP, le Phantom 4 Pro V2.0 apporte aux réalisateurs une liberté de création absolue. Le système de transmission OcuSync 2.0 HD assure une connectivité stable et fiable, la détection d’obstacles dans cinq directions permet une sécurité de vol accrue et une radiocommande dédiée avec un écran intégré fournit un contrôle et une précision améliorée..</p>
+        </div>
+      </div>
+  </div>
+</div>
