--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,3 +1,4 @@
+
 .navbar-lewagon {
   justify-content: space-between;
   background: white;
@@ -8,5 +9,11 @@
 }
 
 .navbar-lewagon .navbar-brand img {
+  width: 90px;
+
+}
+
+#navbarDropdown {
   width: 40px;
+  border-radius: 50%;
 }
