--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -7,11 +7,12 @@
   display: flex;
   justify-content: space-between;
   margin: 10px;
+  flex-wrap: wrap;
 }
 
 .card-product img {
-  height: 100%;
-  width: 120px;
+  height: 200px;
+  width: 100%;
   object-fit: cover;
 }
 
