Done :Customize Homepage Cards

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -2,6 +2,7 @@
 .navbar-lewagon {
   justify-content: space-between;
   background: white;
+  margin-bottom: 15px;
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -10,7 +11,7 @@
 
 .navbar-lewagon .navbar-brand img {
   width: 90px;
-
+  height: 100px;
 }
 
 #navbarDropdown {
