--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -6,9 +6,16 @@
   box-shadow: 0 10px 30px rgba(0,0,0,.1);
   display: flex;
   justify-content: space-between;
-  margin: 10px;
+  margin: 15px;
   flex-wrap: wrap;
+  transform: translate(2%, 2%);
+  transition: transform 0.2s;
 }
+
+.card-product:hover{
+  transform: translate(0, 0);
+}
+
 
 .card-product img {
   height: 200px;
@@ -32,4 +39,6 @@
 
 .card-product .card-product-infos {
   padding: 30px;
+  box-shadow: 0 0.5em 0.5em -0.4em var(--hover);
+  transform: translateY(-0.25em);
 }
