Done : Button onHomepage Cards

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,6 +6,7 @@
         <div class="card-product-infos">
           <h2>Phantom 4 Pro V2.0</h2>
           <p>Équipé d'un capteur CMOS de 1 pouce, capable de prendre des vidéos 4K à 60 ips et des photos 20MP, le Phantom 4 Pro V2.0 apporte aux réalisateurs une liberté de création absolue. Le système de transmission OcuSync 2.0 HD assure une connectivité stable et fiable, la détection d’obstacles dans cinq directions permet une sécurité de vol accrue et une radiocommande dédiée avec un écran intégré fournit un contrôle et une précision améliorée..</p>
+          <%= link_to "Book now", "#", class: "btn btn-flat" %>
         </div>
       </div>
 
@@ -16,6 +17,7 @@
         <div class="card-product-infos">
           <h2>Phantom 4 Pro V2.0</h2>
           <p>Équipé d'un capteur CMOS de 1 pouce, capable de prendre des vidéos 4K à 60 ips et des photos 20MP, le Phantom 4 Pro V2.0 apporte aux réalisateurs une liberté de création absolue. Le système de transmission OcuSync 2.0 HD assure une connectivité stable et fiable, la détection d’obstacles dans cinq directions permet une sécurité de vol accrue et une radiocommande dédiée avec un écran intégré fournit un contrôle et une précision améliorée..</p>
+          <%= link_to "Book now", "#", class: "btn btn-flat" %>
         </div>
       </div>
   </div>
@@ -26,6 +28,7 @@
         <div class="card-product-infos">
           <h2>Phantom 4 Pro V2.0</h2>
           <p>Équipé d'un capteur CMOS de 1 pouce, capable de prendre des vidéos 4K à 60 ips et des photos 20MP, le Phantom 4 Pro V2.0 apporte aux réalisateurs une liberté de création absolue. Le système de transmission OcuSync 2.0 HD assure une connectivité stable et fiable, la détection d’obstacles dans cinq directions permet une sécurité de vol accrue et une radiocommande dédiée avec un écran intégré fournit un contrôle et une précision améliorée..</p>
+          <%= link_to "Book now", "#", class: "btn btn-flat" %>
         </div>
       </div>
   </div>
@@ -36,6 +39,7 @@
         <div class="card-product-infos">
           <h2>Phantom 4 Pro V2.0</h2>
           <p>Équipé d'un capteur CMOS de 1 pouce, capable de prendre des vidéos 4K à 60 ips et des photos 20MP, le Phantom 4 Pro V2.0 apporte aux réalisateurs une liberté de création absolue. Le système de transmission OcuSync 2.0 HD assure une connectivité stable et fiable, la détection d’obstacles dans cinq directions permet une sécurité de vol accrue et une radiocommande dédiée avec un écran intégré fournit un contrôle et une précision améliorée..</p>
+          <%= link_to "Book now", "#", class: "btn btn-flat" %>
         </div>
       </div>
   </div>
