--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,11 @@
 
   <body>
     <%= render "shared/navbar" %>
-    <%= yield %>
+
+    <div class="container">
+        <%= yield %>
+    </div>
+
     <%= render "shared/footer" %>
   </body>
 </html>
