--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-  <div class="container-fluid">
+  <div class="container-fluid px-10">
     <%= link_to "#", class: "navbar-brand" do %>
       <%= image_tag "logo.png", alt: "alttext", class: "logo" %>
     <% end %>
@@ -13,6 +13,9 @@
         <%# if user_signed_in? %>
           <li class="nav-item active">
             <%= link_to "Book Drone", "#", class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <span>CurrentUser (ID)<%= current_user.id %></span>
           </li>
           <li class="nav-item">
             <%= link_to "Add Drone", "#", class: "nav-link" %>
