--- a/app/views/admin/drones/new.html.erb
+++ b/app/views/admin/drones/new.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for @drone %>
+<%= simple_form_for [:admin, @drone] do |f| %>
   <%= f.input :brand,
         required: true,
         autofocus: true,
