--- a/app/views/drones/show.html.erb
+++ b/app/views/drones/show.html.erb
@@ -1,1 +1,8 @@
 <h1>Detail of a drone</h1>
+<% if policy(@drone).edit? %>
+  <%= link_to 'Edit drone', edit_drone_path(@drone) %>
+<% end %>
+
+<% if policy(@drone).destroy? %>
+  <%= button_to 'Delete drone', drone_path(@drone), method: :delete, data: { confirm: 'Are you sure?' } %>
+<% end %>
