--- a/app/views/drones/show.html.erb
+++ b/app/views/drones/show.html.erb
@@ -1,1 +1,9 @@
-<h1>Detail of a drone</h1>
+<div class="card-trip">
+  <%= image_tag "drone.png", alt: "Drone", width: 200 %>
+  <div class="card-trip-infos">
+    <div>
+      <h2><%= @drone.brand %> - <%= @drone.model %> </h2>
+      <p> <%= @drone.description %> </p>
+    <h2 class="card-trip-pricing">99.99€</h2>
+  </div>
+</div>
