--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,7 +14,7 @@
           <li class="nav-item active">
             <%= link_to "Book Drone", "#", class: "nav-link" %>
           </li>
-          <li class="nav-item">
+          <%# class="nav-item">
             <span>CurrentUser (ID)<%= current_user.id %></span>
           </li>
           <li class="nav-item">
