logout and admin index

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,6 +9,4 @@
 
 // Your CSS partials
 @import "pages/index";
-@import "components/cards";
-@import "components/footer";
-@import "components/navbar";
+@import "components/index";
