--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,46 +1,37 @@
-<div class="container">
-  <div class="row d-flex justify-content-around">
-   <div class="col-lg-4">
-      <div class="card-product">
-        <%= image_tag "drone.png", alt: "drone", class: "drone" %>
-        <div class="card-product-infos">
-          <h2>Phantom 4 Pro V2.0</h2>
-          <p>Équipé d'un capteur CMOS de 1 pouce, capable de prendre des vidéos 4K à 60 ips et des photos 20MP, le Phantom 4 Pro V2.0 apporte aux réalisateurs une liberté de création absolue. Le système de transmission OcuSync 2.0 HD assure une connectivité stable et fiable, la détection d’obstacles dans cinq directions permet une sécurité de vol accrue et une radiocommande dédiée avec un écran intégré fournit un contrôle et une précision améliorée..</p>
-          <%= link_to "Book now", "#", class: "btn btn-flat" %>
-        </div>
-      </div>
-
-  </div>
-  <div class="col-lg-4">
-      <div class="card-product">
-        <%= image_tag "drone.png", alt: "drone", class: "drone" %>
-        <div class="card-product-infos">
-          <h2>Phantom 4 Pro V2.0</h2>
-          <p>Équipé d'un capteur CMOS de 1 pouce, capable de prendre des vidéos 4K à 60 ips et des photos 20MP, le Phantom 4 Pro V2.0 apporte aux réalisateurs une liberté de création absolue. Le système de transmission OcuSync 2.0 HD assure une connectivité stable et fiable, la détection d’obstacles dans cinq directions permet une sécurité de vol accrue et une radiocommande dédiée avec un écran intégré fournit un contrôle et une précision améliorée..</p>
-          <%= link_to "Book now", "#", class: "btn btn-flat" %>
-        </div>
-      </div>
-  </div>
-
-  <div class="col-lg-4">
-      <div class="card-product">
-        <%= image_tag "drone.png", alt: "drone", class: "drone" %>
-        <div class="card-product-infos">
-          <h2>Phantom 4 Pro V2.0</h2>
-          <p>Équipé d'un capteur CMOS de 1 pouce, capable de prendre des vidéos 4K à 60 ips et des photos 20MP, le Phantom 4 Pro V2.0 apporte aux réalisateurs une liberté de création absolue. Le système de transmission OcuSync 2.0 HD assure une connectivité stable et fiable, la détection d’obstacles dans cinq directions permet une sécurité de vol accrue et une radiocommande dédiée avec un écran intégré fournit un contrôle et une précision améliorée..</p>
-          <%= link_to "Book now", "#", class: "btn btn-flat" %>
-        </div>
-      </div>
-  </div>
-
-  <div class="col-lg-4">
-      <div class="card-product">
-        <%= image_tag "drone.png", alt: "drone", class: "drone" %>
-        <div class="card-product-infos">
-          <h2>Phantom 4 Pro V2.0</h2>
-          <p>Équipé d'un capteur CMOS de 1 pouce, capable de prendre des vidéos 4K à 60 ips et des photos 20MP, le Phantom 4 Pro V2.0 apporte aux réalisateurs une liberté de création absolue. Le système de transmission OcuSync 2.0 HD assure une connectivité stable et fiable, la détection d’obstacles dans cinq directions permet une sécurité de vol accrue et une radiocommande dédiée avec un écran intégré fournit un contrôle et une précision améliorée..</p>
-          <%= link_to "Book now", "#", class: "btn btn-flat" %>
-        </div>
-      </div>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://res.cloudinary.com/ds4tpkzth/image/upload/v1677667605/alessio-soggetti-rSFxBGpnluw-unsplash_vc525j.jpg);">
+  <div class="container">
+    <h1>Sky Rental brings <strong>drones</strong> to <strong>everyone </strong>!</h1>
+    <p>Change your life and book one of our drones around the world.</p>
+    <a class="btn btn-flat" href="#">Book now</a>
   </div>
 </div>
+
+
+<div id="container">
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos voluptatibus, quis iure vel aliquam veritatis architecto fugiat necessitatibus? Quidem error explicabo nemo maiores voluptatem odio delectus ad, esse reprehenderit animi.</p>
+</div>
+
+<div class="container">
+    <h2 class="text-center">How it works</h2>
+    <div class="cards">
+
+      <div class="card">
+        <img src="https://res.cloudinary.com/ds4tpkzth/image/upload/v1677667606/david-henrichs-72AYEEBJpz4-unsplash_y1aati.jpg" alt="">
+        <h4>Choose a Drone</h4>
+        <p>First choos one of our drones around the world.</p>
+      </div>
+
+      <div class="card">
+        <img src="https://res.cloudinary.com/ds4tpkzth/image/upload/v1677667605/alessio-soggetti-rSFxBGpnluw-unsplash_vc525j.jpg" alt="">
+        <h4>Book a drone</h4>
+        <p>Send an invits to the drone's owner!</p>
+      </div>
+
+      <div class="card">
+        <img src="https://res.cloudinary.com/ds4tpkzth/image/upload/v1677667606/karl-greif-H5IXIH254AU-unsplash_ob9odk.jpg" alt="">
+        <h4>Enjoy !</h4>
+        <p>Finally you will be able to fly.</p>
+      </div>
+
+    </div>
+  </div>
