--- a/app/views/drones/show.html.erb
+++ b/app/views/drones/show.html.erb
@@ -5,6 +5,6 @@
       <h2><%= @drone.brand %> - <%= @drone.model %> </h2>
       <p> <%= @drone.description %> </p>
     <h2 class="card-trip-pricing">99.99€</h2>
+    </div>
   </div>
 </div>
-
