fixed link_to stuff on admin side

--- a/app/views/admin/drones/index.html.erb
+++ b/app/views/admin/drones/index.html.erb
@@ -4,12 +4,13 @@
     <% current_user.drones.each do |drone| %>
    <div class="col-lg-4">
       <div class="card-product">
-        <%= link_to admin_drone_path(drone) %>
+        <%= link_to(drone_path(drone)) do %>
           <% if drone.photo.attached? %>
             <%= cl_image_tag drone.photo.key, height: 300, width: 400 %>
           <% else %>
             <%= cl_image_tag "drone_default.jpg", height: 300, width: 400 %>
           <% end %>
+        <% end %>
         </a>
           <div class="card-product-infos">
             <h2><%= drone.brand %></h2>
