--- a/app/views/admin/drones/index.html.erb
+++ b/app/views/admin/drones/index.html.erb
@@ -1,4 +1,4 @@
-<h3>My drones</h3>
+<h3>Your drones on rent</h3>
 <div class="container">
   <div class="row d-flex justify-content-around">
     <% current_user.drones.each do |drone| %>
