--- a/app/views/admin/drones/show.html.erb
+++ b/app/views/admin/drones/show.html.erb
@@ -1,1 +1,23 @@
-<h3>Hello world</h3>
+
+<div class="renting-infos">
+  <% if @is_booked %>
+    <p>This drone is currently booked.</p>
+  <% else %>
+    <p>This drone is currently available for booking.</p>
+  <% end %>
+</div>
+
+<div class="card-trip">
+  <% if @drone.photo.attached? %>
+    <%= cl_image_tag @drone.photo.key, height: 300, width: 400 %>
+  <% else %>
+    <%= cl_image_tag "drone_default.jpg", height: 300, width: 400 %>
+  <% end %>
+  <div class="card-trip-infos">
+    <div>
+      <h2><%= @drone.brand %> - <%= @drone.model %> </h2>
+      <p> <%= @drone.description %> </p>
+    <h2 class="card-trip-pricing">99.99€</h2>
+    </div>
+  </div>
+</div>
