--- a/app/views/drones/index.html.erb
+++ b/app/views/drones/index.html.erb
@@ -5,7 +5,7 @@
    <div class="col-lg-4">
       <div class="card-product">
         <a href="<%= drone_path(drone) %>">
-        <%= image_tag "drone.png", alt: "drone", class: "drone"%>
+        <%= image_tag "https://res.cloudinary.com/ds4tpkzth/image/upload/v1677671124/drone_onmsio.jpg", alt: "drone"%>
         </a>
           <div class="card-product-infos">
             <h2><%= drone.brand %></h2>
