--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <h1>Sky Rental brings <strong>drones</strong> to <strong>everyone </strong>!</h1>
     <p>Change your life and book one of our drones around the world.</p>
-    <a class="btn btn-flat" href="#">Book now</a>
+    <%= link_to "Book now", drones_path, class: "btn btn-ghost" %>
   </div>
 </div>
 
