--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,9 +11,9 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
         <% if user_signed_in? %>
-          <li class="nav-item active">
+          <%# <li class="nav-item active">
             <%= link_to "Book Drone", "#", class: "nav-link" %>
-          </li>
+          <%# </li> %>
           <%# class="nav-item">
             <span>CurrentUser (ID)<%= current_user.id %></span>
           </li>
