btn-ghost and book now btn

--- a/app/views/drones/show.html.erb
+++ b/app/views/drones/show.html.erb
@@ -1,10 +1,10 @@
 <div class="card-trip">
-  <%= image_tag "drone.png", alt: "Drone", width: 200 %>
-  <div class="card-trip-infos">
-    <div>
-      <h2><%= @drone.brand %> - <%= @drone.model %> </h2>
-      <p> <%= @drone.description %> </p>
-    <h2 class="card-trip-pricing">99.99€</h2>
+  <img src="https://res.cloudinary.com/ds4tpkzth/image/upload/v1677677551/default_drone.png" alt="default_drone">
+    <div class="card-trip-infos">
+      <div>
+        <h2><%= @drone.brand %> - <%= @drone.model %> </h2>
+        <p> <%= @drone.description %> </p>
+        <h2 class="card-trip-pricing">99.99€</h2>
+      </div>
     </div>
-  </div>
 </div>
