--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,7 +18,7 @@
             <span>CurrentUser (ID)<%= current_user.id %></span>
           </li>
           <li class="nav-item">
-            <%= link_to "Add Drone", "#", class: "nav-link" %>
+            <%= link_to "Add Drone", new_admin_drone_path, class: "nav-link" %>
           </li>
           <li class="nav-item dropdown">
             <%= image_tag "https://upload.wikimedia.org/wikipedia/commons/a/ac/Default_pfp.jpg", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
