default_admin_drone_img

--- a/app/views/admin/drones/show.html.erb
+++ b/app/views/admin/drones/show.html.erb
@@ -16,7 +16,7 @@
     <% if @drone.photo.attached? %>
       <%= cl_image_tag @drone.photo.key, width: 600 %>
     <% else %>
-      <%= cl_image_tag "drone_default.jpg", width: 600 %>
+      <img src="https://res.cloudinary.com/ds4tpkzth/image/upload/v1677677551/default_drone.png" alt="default_drone">
     <% end %>
   </div>
 
