--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://res.cloudinary.com/ds4tpkzth/image/upload/v1677667605/alessio-soggetti-rSFxBGpnluw-unsplash_vc525j.jpg);">
-  <div class="container">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://res.cloudinary.com/ds4tpkzth/image/upload/v1677684241/alessio-soggetti-rSFxBGpnluw-unsplash_vc525j.jpg);">
+  <div class="banner-container">
     <h1>Sky Rental brings <strong>drones</strong> to <strong>everyone </strong>!</h1>
     <p>Change your life and book one of our drones around the world.</p>
     <%= link_to "Book now", drones_path, class: "btn btn-ghost" %>
@@ -7,8 +7,12 @@
 </div>
 
 
-<div id="container">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos voluptatibus, quis iure vel aliquam veritatis architecto fugiat necessitatibus? Quidem error explicabo nemo maiores voluptatem odio delectus ad, esse reprehenderit animi.</p>
+<div class="banner-text">
+  <p>Welcome to our drone renting website! We are excited to have you here and to introduce you to the wonderful world of drone technology.
+
+At our website, you can rent a drone for a variety of purposes, whether you are a professional photographer looking to capture stunning aerial shots, or an amateur drone enthusiast who wants to explore the sky.
+
+Our drones are equipped with the latest technology and are easy to operate, even if you are a beginner. Browse our selection of drones today and take your adventure to new heights!</p>
 </div>
 
 <div class="container">
@@ -18,7 +22,7 @@
       <div class="card">
         <img src="https://res.cloudinary.com/ds4tpkzth/image/upload/v1677667606/david-henrichs-72AYEEBJpz4-unsplash_y1aati.jpg" alt="">
         <h4>Choose a Drone</h4>
-        <p>First choos one of our drones around the world.</p>
+        <p>First choose one of our drones around the world.</p>
       </div>
 
       <div class="card">
