--- a/app/views/admin/drones/new.html.erb
+++ b/app/views/admin/drones/new.html.erb
@@ -12,5 +12,6 @@
         autofocus: true,
         hint: "Description" %>
   <%= f.input :photo, as: :file %>
-  <%= f.button :submit %>
+  <%= f.button :submit, class: 'btn btn-primary'%>
+
 <% end %>
