added booking calendar to right view and simple form for reservation

--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,4 +1,6 @@
 <h2>Your booking</h2>
-<%= @booking %> <br/>
-<%= @booking.booking_start %> <br/>
-<%= @booking.booking_end %>
+<div>
+  <%= @booking %> <br/>
+  <%= @booking.booking_start %> <br/>
+  <%= @booking.booking_end %>
+</div>
