Done : add price to all shows+controllers

--- a/app/views/admin/drones/new.html.erb
+++ b/app/views/admin/drones/new.html.erb
@@ -7,6 +7,10 @@
         required: true,
         autofocus: true,
         hint: "Model" %>
+  <%= f.input :price,
+        required: true,
+        autofocus: true,
+        hint: "Price" %>
   <%= f.input :description,
         required: true,
         autofocus: true,
