--- a/app/views/drones/show.html.erb
+++ b/app/views/drones/show.html.erb
@@ -33,6 +33,7 @@
     <%= simple_form_for @new_booking do |f| %>
       <%= f.input :booking_start, as: :date, html5: true %>
       <%= f.input :booking_end, as: :date, html5: true %>
+      <%= f.hidden_field :drone_id, value: @drone.id %>
       <%= f.button :submit, 'Book this drone', class:"btn btn-primary" %>
     <% end %>
   </div>
