Done : Prices drones#index & on drone/show

--- a/app/views/drones/index.html.erb
+++ b/app/views/drones/index.html.erb
@@ -24,6 +24,7 @@
           <div class="card-product-infos">
             <h2><%= drone.brand %></h2>
             <h3><%= drone.model %></h3>
+            <h6>Starting at : <%= drone.price %> €</h6>
           </div>
       </div>
     </div>
