--- a/app/assets/stylesheets/pages/_card.scss
+++ b/app/assets/stylesheets/pages/_card.scss
@@ -37,3 +37,14 @@
     justify-content: space-around;
   }
 }
+
+.card-product-infos h2{
+  font-size: 16px;
+  font-weight: bold;
+  margin: 0;
+}
+
+.card-product-infos h6{
+  font-size: 14px;
+  margin: 2;
+}
