--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -36,7 +36,7 @@
   padding: 8px 24px;
   border-radius: 4px;
   background: #670BFF;
-  transition: background 0.3s ease;
+  transition: 0.3s ease;
 
   :hover {
     background: #4D04C4;
