Done : add style to booking#index & booking/show

--- a/app/assets/stylesheets/pages/_card.scss
+++ b/app/assets/stylesheets/pages/_card.scss
@@ -7,7 +7,7 @@
 }
 
 .card p {
-  opacity: 20%;
+  opacity: 40%;
 }
 
 .card {
@@ -47,4 +47,8 @@
 .card-product-infos h6{
   font-size: 14px;
   margin: 2;
+}
+
+.justify-content-center{
+  justify-content: center;
 }
