--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,8 +1,18 @@
 <h2>Your bookings</h2>
-<div>
+<div class="row d-flex justify-content-center">
   <% current_user.bookings.each do |booking| %>
-    <%= booking %> <br/>
-    <%= booking.booking_start %> <br/>
-    <%= booking.booking_end %>
+  <div class="col-lg-4">
+    <div class="card">
+      <%= link_to(booking_path(booking)) do %>
+        <p> Réservation du :
+        <br/>
+        <%= booking.booking_start %>
+        <br/>
+        au
+        <%= booking.booking_end %>
+        </p>
+      <% end %>
+    </div>
+  </div>
   <% end %>
 </div>
