added background image

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -40,3 +40,20 @@
 .card-product .card-product-infos {
   padding: 30px;
 }
+
+.card {
+  background: white;
+  padding: 30px;
+  border-radius: 4px;
+  box-shadow: 0 10px 30px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+  margin: 15px;
+  flex-wrap: wrap;
+  transform: translate(2%, 2%);
+  transition: transform 0.2s;
+  &hover{
+    transform: translate(0, 0);
+  }
+
+}
