--- a/app/views/admin/drones/index.html.erb
+++ b/app/views/admin/drones/index.html.erb
@@ -1,5 +1,5 @@
 <h3>Your drones on rent</h3>
-<div class="container">
+<div class="container" style="background-image: linear-gradient(rgba(0,0,0,0.05),rgba(0,0,0,0.05)), url(https://res.cloudinary.com/ds4tpkzth/image/upload/v1677771086/billy-huynh-v9bnfMCyKbg-unsplash_uoqbez.jpg);">
   <div class="row d-flex justify-content-around">
     <% current_user.drones.each do |drone| %>
    <div class="col-lg-4">
