--- a/app/views/drones/index.html.erb
+++ b/app/views/drones/index.html.erb
@@ -1,6 +1,3 @@
-<h1>All our available drones</h1>
-<div class="container">
-
   <%= form_with url: drones_path, method: :get, class: "d-flex" do %>
     <%= text_field_tag :query,
       params[:query],
@@ -10,6 +7,7 @@
     <%= submit_tag "Search", class: "btn btn-primary" %>
   <% end %>
 
+<div class="container" style="background-image: linear-gradient(rgba(0,0,0,0.05),rgba(0,0,0,0.05)), url(https://res.cloudinary.com/ds4tpkzth/image/upload/v1677771086/billy-huynh-v9bnfMCyKbg-unsplash_uoqbez.jpg);">
   <div class="row d-flex ">
     <% @drones.each do |drone| %>
    <div class="col-lg-4">
