removed background img

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -20,6 +20,12 @@
   }
 }
 
+.body{
+  background-image: url('https://images.unsplash.com/https://res.cloudinary.com/ds4tpkzth/image/upload/v1677771086/billy-huynh-v9bnfMCyKbg-unsplash_uoqbez.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .banner-text{
   background: white;
   padding: 30px;
