--- a/app/views/admin/drones/show.html.erb
+++ b/app/views/admin/drones/show.html.erb
@@ -1,5 +1,4 @@
-<div class="container" style="background-image: linear-gradient(rgba(0,0,0,0.05),rgba(0,0,0,0.05)), url(https://res.cloudinary.com/ds4tpkzth/image/upload/v1677771086/billy-huynh-v9bnfMCyKbg-unsplash_uoqbez.jpg);">
-
+<div class="container">
   <div>
     <h2><%= @drone.model %> </h2>
   </div>
