--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="container" style="background-image: linear-gradient(rgba(0,0,0,0.05),rgba(0,0,0,0.05)), url(https://res.cloudinary.com/ds4tpkzth/image/upload/v1677771086/billy-huynh-v9bnfMCyKbg-unsplash_uoqbez.jpg);">
+<div class="container">
   <div class="row">
     <div class="col-6">
       <div class="card h-100">
@@ -23,19 +23,19 @@
   </div>
   <br>
   <div>
-    <h2>Comment ça fonctionne?</h2>
+    <h3>Comment ça fonctionne?</h3>
     <p>Vous avez un drone et vous souhaitez le louer? Vous avez besoin d'un drone pour une mission? SkyRental est la solution!</p>
     <br>
-    <h3>Photographie aerienne</h3>
+    <h4>Photographie aerienne</h4>
     <p>capturer de superbes photographies et vidéos aériennes. Les drones équipés de caméras de haute qualité peuvent capturer des images et des vidéos époustouflantes depuis des perspectives uniques qui seraient impossibles à obtenir avec des méthodes de photographie traditionnelles.</p>
     <br>
-    <h3>Analyses de terrain</h3>
+    <h4>Analyses de terrain</h4>
     <p>Les drones peuvent être utilisés pour effectuer des levés topographiques et cartographier de vastes zones rapidement et précisément. Ils peuvent capturer des images haute résolution qui peuvent être utilisées pour créer des cartes 3D détaillées, ce qui peut être utile dans une variété d'industries, telles que l'agriculture, la construction et l'exploitation minière.</p>
     <br>
-    <h3>Inspections</h3>
+    <h4>Inspections</h4>
     <p> Les drones peuvent être utilisés pour inspecter des endroits difficiles d'accès tels que les toits, les lignes électriques et les éoliennes. Ils peuvent accéder rapidement et en toute sécurité à ces zones et capturer des images et des vidéos de haute qualité, qui peuvent être utilisées à des fins d'inspection et de maintenance.</p>
     <br>
-    <h3>Loisirs</h3>
+    <h4>Loisirs</h4>
     <p>Louer un drone peut être une expérience amusante et passionnante. Que vous vouliez piloter un drone pour la première fois ou tester un nouveau modèle, la location d'un drone peut fournir une expérience unique et excitante qui peut être appréciée avec des amis et de la famille.</p>
   </div>
 </div>
