--- a/app/views/drones/index.html.erb
+++ b/app/views/drones/index.html.erb
@@ -7,7 +7,7 @@
     <%= submit_tag "Search", class: "btn btn-primary" %>
   <% end %>
 
-<div class="container" style="background-image: linear-gradient(rgba(0,0,0,0.05),rgba(0,0,0,0.05)), url(https://res.cloudinary.com/ds4tpkzth/image/upload/v1677771086/billy-huynh-v9bnfMCyKbg-unsplash_uoqbez.jpg);">
+<div class="container">
   <div class="row d-flex ">
     <% @drones.each do |drone| %>
    <div class="col-lg-4">
