--- a/app/views/drones/show.html.erb
+++ b/app/views/drones/show.html.erb
@@ -36,9 +36,37 @@
       <%= f.hidden_field :drone_id, value: @drone.id %>
       <%= f.button :submit, 'Book this drone', class:"btn btn-primary" %>
     <% end %>
-   </div>
-
-  <div class="pricing py-3">
-   <p><%= @drone.price %> €</p>
   </div>
+
+  <br>
+
+  <hr class="solid">
+
+  <h1>Reviews of : <%= @drone.brand %> -  <small><%= @drone.model %></small></h1>
+
+  <br>
+
+  <h2><%= pluralize @drone.reviews.size, "review" %></h2>
+
+  <br>
+
+  <% if @drone.reviews.blank? %>
+    <p>Be the first to leave a review for <%= @drone.model %> </p>
+  <% else %>
+    <% @drone.reviews.each do |review| %>
+      <p><%= review.content %> - <%= review.rating %>/5</p>
+    <% end %>
+  <% end %>
+
+
+  <%= simple_form_for([@drone, @review]) do |f| %>
+  <%= f.input :rating %>
+  <%= f.input :content %>
+  <%= f.button :submit, class: 'btn btn-primary' %>
+  <% end %>
+
+  <br>
+
+  <%= link_to "< Back to all drones", drones_path %>
+
 </div>
