--- a/app/views/drones/show.html.erb
+++ b/app/views/drones/show.html.erb
@@ -59,11 +59,16 @@
   <% end %>
 
 
-  <%= simple_form_for([@drone, @review]) do |f| %>
-  <%= f.input :rating %>
-  <%= f.input :content %>
-  <%= f.button :submit, class: 'btn btn-primary' %>
+
+    <h2>Laissez une évaluation</h2>
+  <%= simple_form_for([@drone, @review])do |f| %>
+    <%= f.input :content %>
+    <%= f.input :rating, collection: Review::AUTHORIZED_RATINGS,
+                         include_blank: false %>
+    <%= f.submit class: "btn btn-primary", value: "Valider" %>
   <% end %>
+
+
 
   <br>
 
