--- a/app/views/admin/drones/show.html.erb
+++ b/app/views/admin/drones/show.html.erb
@@ -34,11 +34,10 @@
 
   <div>
   <%= month_calendar(events: @bookings) do |date, bookings| %>
-    <%= date %>
+    <%= date.day %>
     <% bookings.each do |booking| %>
-      <%= booking.start %>
+      <%= link_to booking.user_id, booking_path(booking) %>
     <% end %>
   <% end %>
   </div>
-
 </div>
