--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,6 +1,6 @@
 // Specific CSS for your home-page
 .card-product {
-  background: #E6F4F1;
+  background: white;
   padding: 30px;
   border-radius: 4px;
   box-shadow: 0 10px 30px rgba(0,0,0,.1);
@@ -42,7 +42,7 @@
 }
 
 .card {
-  background: #E6F4F1;
+  background: white;
   padding: 30px;
   border-radius: 4px;
   box-shadow: 0 10px 30px rgba(0,0,0,.1);
