--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -31,3 +31,10 @@
   background: #4D04C4;
   color: white;
 }
+
+.p{
+  font-size: 20px;
+  color: #29b0ff;
+  opacity: .7;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+}
